src/z80asm/z80asm2/t/10-expr/expected/error_pow.txt
% z88dk-z80asm -v -dump-after-cmdline @t/10-expr//input/error_pow.lst t/10-expr//input/empty.asm
Define constant: A = 5
Define constant: B = 2
t/10-expr/input/error_pow.lst:3:10: error: Negative exponent in integer is not defined
    -DE00=2**-1
             ^
Define constant: E00 = 0
t/10-expr/input/error_pow.lst:4:10: error: Zero raised to the power of zero is not defined
    -DE01=0**0
             ^
Define constant: E01 = 1
t/10-expr/input/error_pow.lst:5:13: error: Negative exponent in integer is not defined
    -DE02=(-3)**-2
                ^
Define constant: E02 = 0
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
verbose	1
cpu_id	z80
ucase_symbols	0
float_format	genmath
preprocess_only	0
generate_dependencies	0
swap_ixiy	0
date_stamp	0
filler_byte	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_hla_expansion	0
dump_after_synth_expansion	0
dump_after_preprocessing	0
dump_after_parse	0
dump_after_symbol_collection	0
dump_after_layout	0
dump_after_assembly	0
dump_after_link_collection	0
m4_options	
perl_options	
cpp_options	
output_dir	
global_def	A	5
global_def	B	2
global_def	E00	0
global_def	E01	1
global_def	E02	0
global_def	__CPU_Z80__	1
global_def	__CPU_ZILOG__	1
global_def	__FLOAT_GENMATH__	1
input_file	t/10-expr/input/empty.asm
